# diffusion-image-generator

./: .gitignore  README.md  combined_python_files.py  pyproject.toml
notebooks/: generate.ipynb
scripts/: generate.py  train.py
src/diffusion/: config.py  sampling.py
src/diffusion/data/: loaders.py
src/diffusion/diffusion/: forward.py
src/diffusion/models/: attention.py  unet.py
src/diffusion/utils/: class_embedding.py  schedulers.py  time_embedding.py
