[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-model"
version = "0.1.0"
description = "A minimal implementation of conditional diffusion models"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Science/Research",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["torch", "torchvision", "matplotlib", "tqdm"]

[project.optional-dependencies]
dev = ["pytest", "ipython", "jupyter"]
